fixed notice margin on small screens

--- a/assets/scss/_notice.scss
+++ b/assets/scss/_notice.scss
@@ -2,6 +2,7 @@
     position: absolute;
     @include respond(940px) {
         position: relative;
+        top: 20px;
     }
     &__body {
         padding-left: 60px;
@@ -14,6 +15,9 @@
         font-size: 14px;
         font-weight: 400;
         line-height: 19.26px;
+        @include respond(940px) {
+            margin-bottom: 48px;
+        }
     }
     &__warning-icon {
         position: absolute;
